demo-istio/quickstart2/deploys/istio_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: quickstart2-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: GRPC
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: quickstart2-svc
spec:
  hosts:
  - "*"
  gateways:
  - quickstart2-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: quickstart2
        port:
          number: 8080
  - route:
    - destination:
        host: pcbook
        port:
          number: 8090
  # - match:
  #   - uri:
  #       prefix: /api
  #   route:
  #   - destination:
  #       host: quickstart2
  #       port:
  #         number: 8080
